# PhyTexDev

./: CMakeLists.txt  README.md
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml
BuildUtilities/cweb/: CMakeLists.txt  help.h
BuildUtilities/md5walk/: CMakeLists.txt  md5walk.cpp
BuildUtilities/mpc/: CMakeLists.txt  mpc.cpp
Documentation/: CMakeLists.txt
Libraries/MiKTeX/App/: CMakeLists.txt  app.cpp
Libraries/MiKTeX/Dib/: CMakeLists.txt
Libraries/MiKTeX/Dvi/: CMakeLists.txt
Libraries/MiKTeX/Extractor/: CabExtractor.cpp  TarBzip2Extractor.cpp  TarExtractor.cpp  TarLzmaExtractor.cpp
Libraries/MiKTeX/PackageManager/: CMakeLists.txt  CurlWebFile.cpp  CurlWebSession.cpp  ExpatTpmParser.cpp  PackageDataStore.cpp  PackageInstallerImpl.cpp  PackageManagerImpl.cpp
Libraries/MiKTeX/Setup/: internal.h
Libraries/MiKTeX/TeXAndFriends/: CMakeLists.txt  c4pstart.cpp  inputline.cpp  mfapp.cpp  texapp.cpp  texmfapp.cpp  webapp.cpp
Libraries/MiKTeX/Trace/: StopWatch.cpp  TraceStream.cpp
Libraries/MiKTeX/Util/: CMakeLists.txt  Helpers.cpp
Libraries/MiKTeX/Web2CEmulation/: CMakeLists.txt  w2cemu.cpp
Programs/Bibliography/bibtex-x/: CMakeLists.txt
Programs/Editors/TeXworks/: CMakeLists.txt
Programs/Indexing/upmendex/: CMakeLists.txt
Programs/MiKTeX/epstopdf/: CMakeLists.txt  epstopdf.cpp
Programs/MiKTeX/findtexmf/: CMakeLists.txt  findtexmf.cpp
Programs/MiKTeX/gsf2pk/: CMakeLists.txt  gsf2pk.cpp
Programs/MiKTeX/initexmf/: CMakeLists.txt  initexmf.cpp
Programs/MiKTeX/makex/: CMakeLists.txt  MakeUtility.h
Programs/MiKTeX/mkfntmap/: CMakeLists.txt  internal.h
Programs/MiKTeX/mthelp/: CMakeLists.txt  mthelp.cpp
Programs/MiKTeX/mtprint/: CMakeLists.txt
Programs/MiKTeX/tdsutil/: CMakeLists.txt  Recipe.cpp  tdsutil.cpp
Programs/MiKTeX/texify/: CMakeLists.txt  mcd.cpp
Programs/TeXAndFriends/luatex/: CMakeLists.txt  libluatex.cmake  luamisc.cmake  miktex.cmake
Programs/TeXAndFriends/mplib/: CMakeLists.txt
Programs/TeXAndFriends/xetex/: CMakeLists.txt
cmake/: SourcePaths.cmake
cmake/modules/: SourcePaths.cmake
(+60 files in other folders)
